@@ -10,6 +10,7 @@ export(s2c)
 export(server)
 import(assertthat)
 import(pbdZMQ)
+import(tcltk)
 importFrom(sodium,diffie_hellman)
 importFrom(sodium,keygen)
 importFrom(sodium,pubkey)
