@@ -11,6 +11,7 @@
 #' 
 #' @import pbdZMQ
 #' @import assertthat
+#' @import tcltk
 #' @importFrom stats runif
 #' @importFrom utils capture.output globalVariables packageVersion
 #' @importFrom sodium keygen pubkey diffie_hellman
