@@ -286,6 +286,25 @@ remoter_eval <- function(input, env)
 
 
 
+remoter_read_password <- function()
+{
+  tt <- tktoplevel() 
+  pw <- tclVar("") 
+  
+  label <- tklabel(tt, text="enter the password") 
+  textbox <- tkentry(tt,show="*",textvariable=pw) 
+  tkbind(textbox, "<Return>", function() tkdestroy(tt)) 
+  button <- tkbutton(tt,text="ok", default="active", command=function() tkdestroy(tt)) 
+  tkpack(label, textbox, button) 
+  
+  tkwait.window(tt) 
+  
+  return(tclvalue(pw)) 
+  # readline("enter the password:  ") 
+}
+
+
+
 remoter_check_password <- function()
 {
   if (iam("local"))
@@ -295,7 +314,7 @@ remoter_check_password <- function()
     
     while (needpw)
     {
-      pw <- readline("enter the password:  ")
+      pw <- remoter_read_password()
       send(pw)
       check <- receive()
       
